force-app/main/default/objects/ChargeOver_Invoice__c/ChargeOver_Invoice__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Invoice</label>
    <nameField>
        <label>ChargeOver Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>