force-app/main/default/objects/ChargeOver_Invoice__c/fields/Account_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Activity_Date__c</fullName>
    <description>The Last Activity Date on the Account</description>
    <formula>Account__r.LastActivityDate</formula>
    <label>Account Last Activity Date</label>
    <type>Date</type>
</CustomField>