force-app/main/default/objects/ChargeOver_Invoice__c/fields/ChargeOver_Admin_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Admin_URL__c</fullName>
    <description>A link to the Invoice within the ChargeOver system</description>
    <inlineHelpText>A link to the Invoice within the ChargeOver system</inlineHelpText>
    <label>ChargeOver Admin URL</label>
    <type>Url</type>
</CustomField>