force-app/main/default/objects/ChargeOver_Invoice__c/fields/ChargeOver_Pay_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Pay_URL__c</fullName>
    <description>Link that takes you directly to the payment form. Does not include any stored or previously used payment methods.</description>
    <inlineHelpText>Link that takes you directly to the payment form. Does not include any stored or previously used payment methods.</inlineHelpText>
    <label>ChargeOver Pay URL</label>
    <type>Url</type>
</CustomField>