force-app/main/default/objects/ChargeOver_Invoice__c/fields/ChargeOver_Payoff_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Payoff_URL__c</fullName>
    <description>A link used to pay off the remainder of a client&apos;s open invoice</description>
    <inlineHelpText>This link directs the client to pay off the remainder of the Invoice. Will default to saved payment method.</inlineHelpText>
    <label>ChargeOver Payoff URL</label>
    <type>Url</type>
</CustomField>