force-app/main/default/objects/ChargeOver_Invoice__c/fields/ChargeOver_View_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_View_PDF_URL__c</fullName>
    <description>A link to view the Invoice as a PDF</description>
    <inlineHelpText>A link to view the Invoice as a PDF</inlineHelpText>
    <label>ChargeOver View PDF URL</label>
    <type>Url</type>
</CustomField>