force-app/main/default/objects/ChargeOver_Invoice__c/fields/ChargeOver_View_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_View_URL__c</fullName>
    <description>A publically available link to view the Invoice within a web page. Allows for making an online payment</description>
    <inlineHelpText>A publically available link to view the Invoice within a web page. Allows for making an online payment</inlineHelpText>
    <label>ChargeOver View URL</label>
    <type>Url</type>
</CustomField>