force-app/main/default/objects/ChargeOver_Invoice__c/fields/Collection_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Collection_Invoice_URL__c</fullName>
    <description>The URL for billing and collection reps to use to collect past due invoices. Contains UTM parameters for tracking purposes</description>
    <inlineHelpText>The URL for billing and collection reps to use to collect past due invoices. Contains UTM parameters for tracking purposes</inlineHelpText>
    <label>Collection Invoice URL</label>
    <type>Url</type>
</CustomField>