force-app/main/default/objects/ChargeOver_Invoice__c/fields/Collections_Rep__c.field-meta.xml
<CustomField>
    <fullName>Collections_Rep__c</fullName>
    <description>The name of the Collections Rep on the Account</description>
    <formula>Account__r.Collections_Rep__r.FirstName +&quot; &quot;+ Account__r.Collections_Rep__r.LastName</formula>
    <label>Collections Rep</label>
    <type>Text</type>
</CustomField>