force-app/main/default/objects/ChargeOver_Invoice__c/fields/Historical_Update__c.field-meta.xml
<CustomField>
    <fullName>Historical_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger updates of the ChargeOver Invoice record</description>
    <label>Historical Update</label>
    <type>Checkbox</type>
</CustomField>