force-app/main/default/objects/ChargeOver_Invoice__c/fields/Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_URL__c</fullName>
    <description>The URL for the ChargeOver Invoice that forms the basis for adding UTM parameters for payment tracking. Allows clients to use a previously saved payment method.</description>
    <inlineHelpText>The URL for the ChargeOver Invoice that forms the basis for adding UTM parameters for payment tracking. Allows clients to use a previously saved payment method.</inlineHelpText>
    <label>Invoice URL</label>
    <type>Url</type>
</CustomField>