force-app/main/default/objects/ChargeOver_Invoice__c/fields/Last_Collection_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Collection_Call_Date__c</fullName>
    <description>The date of the most recent call completed by a collections rep</description>
    <formula>Account__r.Last_Collection_Call_Date__c</formula>
    <label>Last Collection Call Date</label>
    <type>Date</type>
</CustomField>