force-app/main/default/objects/ChargeOver_Invoice__c/fields/of_Collection_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_Collection_Calls__c</fullName>
    <description>The number of calls placed to the Account by a billing/collections/retention representative</description>
    <formula>Account__r.of_Collection_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of calls placed to the Account by a billing/collections/retention representative</inlineHelpText>
    <label># of Collection Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>