force-app/main/default/objects/ChargeOver_Invoice__c/fields/of_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Past_Due__c</fullName>
    <formula>IF(( ISPICKVAL(ChargeOver_Invoice_Status__c, &quot;Overdue&quot;)) || (ISPICKVAL(ChargeOver_Invoice_Status__c, &quot;Unpaid&quot;)),(TODAY()- Due_Date__c),0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>