force-app/main/default/objects/ChargeOver_Invoice__c/fields/Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Balance__c</fullName>
    <description>The amount of the ChargeOver invoice that is overdue</description>
    <label>Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>