force-app/main/default/objects/ChargeOver_Invoice__c/fields/RefNumber__c.field-meta.xml
<CustomField>
    <fullName>RefNumber__c</fullName>
    <label>Invoice #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>