force-app/main/default/objects/ChargeOver_Invoice__c/fields/Retry_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Retry_Schedule__c</fullName>
    <description>If an invoice isn&apos;t successfully paid then this field identifies what the payment schedule was for any payment retry</description>
    <label>Retry Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Retry</fullName>
                <default>true</default>
                <label>No Retry</label>
            </value>
            <value>
                <fullName>Default Schedule</fullName>
            </value>
            <value>
                <fullName>Renewal 3-Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>