force-app/main/default/objects/ChargeOver_Invoice__c/fields/Sales_Collection_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Sales_Collection_Invoice_URL__c</fullName>
    <description>The URL for sales reps to use to collect past due invoices</description>
    <inlineHelpText>The URL for sales reps to use to collect past due invoices</inlineHelpText>
    <label>Sales Collection Invoice URL</label>
    <type>Url</type>
</CustomField>