force-app/main/default/objects/ChargeOver_Invoice__c/fields/Terms_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Days__c</fullName>
    <label>Terms # of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>